--- a/home.html
+++ b/home.html
@@ -27,39 +27,7 @@
                             <li class="drop_down_btn position-relative">
                                 <a href="#" class="d-flex align-items-center">
                                     <div class="header_category-icon">
-                                        <svg viewBox="0 0 276.2 276.2">
-                                            <g>
-                                                <g>
-                                                    <path class="cat-dot"
-                                                        d="M33.1,2.5C15.3,2.5,0.9,17,0.9,34.8s14.5,32.3,32.3,32.3s32.3-14.5,32.3-32.3S51,2.5,33.1,2.5z">
-                                                    </path>
-                                                    <path class="cat-dot"
-                                                        d="M137.7,2.5c-17.8,0-32.3,14.5-32.3,32.3s14.5,32.3,32.3,32.3c17.8,0,32.3-14.5,32.3-32.3S155.5,2.5,137.7,2.5    z">
-                                                    </path>
-                                                    <path class="cat-dot"
-                                                        d="M243.9,67.1c17.8,0,32.3-14.5,32.3-32.3S261.7,2.5,243.9,2.5S211.6,17,211.6,34.8S226.1,67.1,243.9,67.1z">
-                                                    </path>
-                                                    <path class="cat-dot"
-                                                        d="M32.3,170.5c17.8,0,32.3-14.5,32.3-32.3c0-17.8-14.5-32.3-32.3-32.3S0,120.4,0,138.2S14.5,170.5,32.3,170.5z">
-                                                    </path>
-                                                    <path class="cat-dot"
-                                                        d="M136.8,170.5c17.8,0,32.3-14.5,32.3-32.3c0-17.8-14.5-32.3-32.3-32.3c-17.8,0-32.3,14.5-32.3,32.3    C104.5,156.1,119,170.5,136.8,170.5z">
-                                                    </path>
-                                                    <path class="cat-dot"
-                                                        d="M243,170.5c17.8,0,32.3-14.5,32.3-32.3c0-17.8-14.5-32.3-32.3-32.3s-32.3,14.5-32.3,32.3    C210.7,156.1,225.2,170.5,243,170.5z">
-                                                    </path>
-                                                    <path class="cat-dot"
-                                                        d="M33,209.1c-17.8,0-32.3,14.5-32.3,32.3c0,17.8,14.5,32.3,32.3,32.3s32.3-14.5,32.3-32.3S50.8,209.1,33,209.1z    ">
-                                                    </path>
-                                                    <path class="cat-dot"
-                                                        d="M137.6,209.1c-17.8,0-32.3,14.5-32.3,32.3c0,17.8,14.5,32.3,32.3,32.3c17.8,0,32.3-14.5,32.3-32.3    S155.4,209.1,137.6,209.1z">
-                                                    </path>
-                                                    <path class="cat-dot"
-                                                        d="M243.8,209.1c-17.8,0-32.3,14.5-32.3,32.3c0,17.8,14.5,32.3,32.3,32.3c17.8,0,32.3-14.5,32.3-32.3    S261.6,209.1,243.8,209.1z">
-                                                    </path>
-                                                </g>
-                                            </g>
-                                        </svg>
+                                        <img src="./assets/image/dot-menu.svg" alt="">
                                     </div>
                                     <span>Category</span>
                                 </a>
@@ -110,13 +78,7 @@
                                 <input type="text" placeholder="Search for products...">
                                 <a href="#" class="shopping_cart_and_label position-relative">
                                     <div class="shopping_cart_icon">
-                                        <svg viewBox="0 0 24 24">
-                                            <circle class="st0" cx="9" cy="21" r="1"></circle>
-                                            <circle class="st0" cx="20" cy="21" r="1"></circle>
-                                            <path class="st0"
-                                                d="M1,1h4l2.7,13.4c0.2,1,1,1.6,2,1.6h9.7c1,0,1.8-0.7,2-1.6L23,6H6">
-                                            </path>
-                                        </svg>
+                                       <img src="./assets/image/cart.svg" alt="">
                                     </div>
                                     <span class="shopping_cart_label">0</span>
                                 </a>
@@ -130,8 +92,138 @@
                 </div>
             </div>
         </div>
-
     </header>
+
+
+    <main>
+        <section class="main_up_area hero__height d-flex align-items-center grey-bg-2 p-relative">
+            <div class="main_up_shape">
+               <img class="hero-1-circle" src="./assets/image/hero-1-circle.png" alt="">
+               <img class="hero-1-circle-2" src="./assets/image/hero-1-circle-2.png" alt="">
+               <img class="hero-1-dot-2" src="./assets/image/hero-1-dot-2.png" alt="">
+            </div>
+            <div class="container">
+               <div class="main_up-wrapper mt-90">
+                  <div class="row align-items-center">
+                     <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-6">
+                        <div class="main_up p-relative z-index-1">
+                           <h3 class="main_up_title">
+                              <span>Access 2700+</span>
+                              <span class="yellow-shape"><b>Online</b> <img src="./assets/image/yellow-bg.png" alt="yellow-shape"> </span><b>Tutorial From Top Instructor.</b>
+                              </h3>
+                              <p>Meet university,and cultural institutions, who'll share their experience.</p>
+                              <button type="button" class="btn btn-primary">View all course</button>
+                          
+                        </div>
+                     </div>
+                     <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-6">
+                        <div class="main_up_thumb d-flex p-relative">
+                           <div class="main_up_thumb-shape">
+                              <img class="hero-1-dot" src="./assets/image/hero-1-dot.png"alt="">
+                              <img class="hero-1-circle-3" src="./assets/image/hero-1-circle-3.png" alt="">
+                              <img class="hero-1-circle-4" src="./assets/image/hero-1-circle-4.png" alt="">
+                           </div>
+                           <div class="main_up_thumb-big mr-30">
+                              <img src="./assets/image/hero-1.jpg" alt="">
+                              <div class="hero__quote hero__quote-animation">
+                                 <span>Tomorrow is our</span>
+                                 <h4>“When I Grow Up” Spirit Day!</h4>
+                              </div>
+                           </div>
+                           <div class="main_up_thumb-sm mt-50 d-none d-lg-block">
+                              <img src="./assets/image/hero-sm-1.jpg" alt="">
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
+
+
+
+
+
+
+    </main>
+
+
+
+
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
