create banner main

--- a/home.html
+++ b/home.html
@@ -348,7 +348,48 @@
             </div>
         </section>
 
-       
+        <section id="banner" class="banner__area pb-110">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-6">
+                        <div class="banner-item p-relative mb-40 ">
+                            <div class="banner-content ">
+                                <div class="bn-1">
+                                    <span>Free</span>
+                                    <h3 class="banner-title">
+                                        <a href="course-details.html">Germany Foundation <br> Document</a>
+                                        <div class="banner-thumb d-none d-sm-block d-md-none d-lg-block">
+                                            <img src="./assets/image/banner-img-1.png" alt="">
+                                        </div>
+                                    </h3>
+                                    <div class="pc-img">
+                                        <button class="btn btn-primary" type="submit">View Courses</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-6">
+                        <div class="banner-item p-relative mb-40 ">
+                            <div class="banner-content ">
+                                <div class="bn-2">
+                                    <span class="orange">new</span>
+                                    <h3 class="banner-title">
+                                        <a href="#">Online Courses <br>From Eduka University</a>
+                                    </h3>
+                                    <div class="phone-btn">
+                                        <button class="btn btn-primary" type="submit">Find Out More</button>
+                                    </div>
+                                </div>
+                                <div class="banner-thumb banner-thumb-2 d-none d-sm-block d-md-none d-lg-block">
+                                    <img src="./assets/image/banner-img-2.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </section>
 
 
 
