create cart-main section

--- a/home.html
+++ b/home.html
@@ -389,7 +389,304 @@
                     </div>
                 </div>
             </div>
-            </section>
+        </section>
+
+
+
+
+
+
+        <section id="course" class="course__area pt-115 pb-120 grey-bg">
+            <div class="container">
+                <div class="row align-items-end">
+                    <div class="col-xxl-5">
+                        <div class="section__title-wrapper mb-60">
+                            <h3 class="main-up-title">
+                                <span><b>Find the Right</b></span> <span><b>Online </b></span>
+                                <span class="yellow-shape"><b>Course</b> <img src="./assets/image/yellow-bg.png"
+                                        alt="yellow-shape-img"> </span>
+                                <b>For You</b>
+                            </h3>
+                            <p>You don't have to struggle alone, you've got our assistance and help.</p>
+                        </div>
+                    </div>
+                    <div class="col-xxl-7">
+                        <div class="course__menu d-flex justify-content-lg-end mb-60">
+                            <div class="masonary-menu filter-button-group">
+                                <button class="see" data-filter="*">
+                                    See All
+                                </button>
+                                <button data-filter=".cat1">Trending</button>
+                                <button>Trending</button>
+                                <button data-filter=".cat2">Popularity</button>
+                                <button data-filter=".cat3">Featured</button>
+                                <button data-filter=".cat4">Art & Design</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row grid">
+                    <div class="col-xxl-4">
+                        <div class="course__item white-bg mb-30 fix">
+                            <div class="course__thumb w-img p-relative fix">
+                                <a href="">
+                                    <img src="./assets/image/course11.jpg" alt="">
+                                </a>
+                                <div class="course__tag">
+                                    <a href="#">Art & Design</a>
+                                </div>
+                            </div>
+                            <div class="course__content">
+                                <div class="course__meta d-flex align-items-center justify-content-between">
+                                    <div class="course__lesson">
+                                        <span><i class="far fa-book-alt"></i>43 Lesson</span>
+                                    </div>
+                                    <div class="course__rating">
+                                        <i class="fa-sharp fa-solid fa-star" style="color: #ffa500;"></i></i>4.5
+                                        (44)</span>
+                                    </div>
+                                </div>
+                                <h3 class="course__title"><a href="">Become a product Manager learn the skills &
+                                        job.</a></h3>
+                                <div class="course__teacher d-flex align-items-center">
+                                    <div class="course__teacher-thumb mr-15">
+                                        <img src="./assets/image/teacher-1.jpg" alt="">
+                                    </div>
+                                    <h6><a href="">Jim Séchen</a></h6>
+                                </div>
+                            </div>
+                            <div class="course__more d-flex justify-content-between align-items-center">
+                                <div class="course__status">
+                                    <span class="pruple">$21.00</span>
+                                    <span class="old-price">$33.00</span>
+                                </div>
+                                <div class="course__btn">
+                                    <a href="" class="link-btn">
+                                        Know Details
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xxl-4">
+                        <div class="course__item white-bg mb-30 fix">
+                            <div class="course__thumb w-img p-relative fix">
+                                <a href="">
+                                    <img src="./assets/image/course-2-1.jpg" alt="">
+                                </a>
+                                <div class="course__tag">
+                                    <a href="#" class="sky-blue">Mechanical</a>
+                                </div>
+                            </div>
+                            <div class="course__content">
+                                <div class="course__meta d-flex align-items-center justify-content-between">
+                                    <div class="course__lesson">
+                                        <span><i class="far fa-book-alt"></i>72 Lesson</span>
+                                    </div>
+                                    <div class="course__rating">
+                                        <i class="fa-sharp fa-solid fa-star" style="color: #ffa500;"></i></i>4.0
+                                        (44)</span>
+                                    </div>
+                                </div>
+                                <h3 class="course__title"><a href="">Fundamentals of music theory
+                                        Learn new</a></h3>
+                                <div class="course__teacher d-flex align-items-center">
+                                    <div class="course__teacher-thumb mr-15">
+                                        <img src="./assets/image/teacher-2.jpg" alt="">
+                                    </div>
+                                    <h6><a href="">Barry Tone</a></h6>
+                                </div>
+                            </div>
+                            <div class="course__more d-flex justify-content-between align-items-center">
+                                <div class="course__status d-flex align-items-center">
+                                    <span class="sky-blue">$32.00</span>
+                                    <span class="old-price">$68.00</span>
+                                </div>
+                                <div class="course__btn">
+                                    <a href="" class="link-btn">
+                                        Know Details
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 grid-item cat3 cat4 cat3">
+                        <div class="course__item white-bg mb-30 fix">
+                            <div class="course__thumb w-img p-relative fix">
+                                <a href="">
+                                    <img src="./assets/image/course-3.jpg" alt="">
+                                </a>
+                                <div class="course__tag">
+                                    <span>Development</span>
+                                </div>
+                            </div>
+                            <div class="course__content">
+                                <div class="course__meta d-flex align-items-center justify-content-between">
+                                    <div class="course__lesson">
+                                        <span><i class="far fa-book-alt"></i>35 Lesson</span>
+                                    </div>
+                                    <div class="course__rating">
+                                        <i class="fa-sharp fa-solid fa-star" style="color: #ffa500;"></i></i>4.3
+                                        (44)</span>
+                                    </div>
+                                </div>
+                                <h3 class="course__title"><a href="">Bases Matemáticas dios Álgebra Ecuacion
+                                    </a></h3>
+                                <div class="course__teacher d-flex align-items-center">
+                                    <div class="course__teacher-thumb mr-15">
+                                        <img src="./assets/image/teacher-3.jpg" alt="">
+                                    </div>
+                                    <h6><a href="">Samuel Serif</a></h6>
+                                </div>
+                            </div>
+                            <div class="course__more d-flex justify-content-between align-items-center">
+                                <div class="course__status d-flex align-items-center">
+                                    <span class="green">$13.00</span>
+                                    <span class="old-price">$19.00</span>
+                                </div>
+                                <div class="course__btn">
+                                    <a href="" class="link-btn">
+                                        Know Details
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xxl-4">
+                        <div class="course__item white-bg mb-30 fix">
+                            <div class="course__thumb w-img p-relative fix">
+                                <a href="">
+                                    <img src="./assets/image/course-4-1.jpg" alt="">
+                                </a>
+                                <div class="course__tag">
+                                    <a href="#" class="blue">Marketing</a>
+                                </div>
+                            </div>
+                            <div class="course__content">
+                                <div class="course__meta d-flex align-items-center justify-content-between">
+                                    <div class="course__lesson">
+                                        <span><i class="far fa-book-alt"></i>60 Lesson</span>
+                                    </div>
+                                    <div class="course__rating">
+                                        <i class="fa-sharp fa-solid fa-star" style="color: #ffa500;"></i>3.5 (44)</span>
+                                    </div>
+                                </div>
+                                <h3 class="course__title"><a href="">Strategy law and organization Foundation</a></h3>
+                                <div class="course__teacher d-flex align-items-center">
+                                    <div class="course__teacher-thumb mr-15">
+                                        <img src="./assets/image/teacher-4.jpg" alt="">
+                                    </div>
+                                    <h6><a href="instructor-details.html">
+                                            Elon Gated</a></h6>
+                                </div>
+                            </div>
+                            <div class="course__more d-flex justify-content-between align-items-center">
+                                <div class="course__status d-flex align-items-center">
+                                    <span class="blue">$62.00</span>
+                                    <span class="old-price">$97.00</span>
+                                </div>
+                                <div class="course__btn">
+                                    <a href="" class="link-btn">
+                                        Know Details
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xxl-4">
+                        <div class="course__item white-bg mb-30 fix">
+                            <div class="course__thumb w-img p-relative fix">
+                                <a href="">
+                                    <img src="./assets/image/course-5-1.jpg" alt="">
+                                </a>
+                                <div class="course__tag">
+                                    <a href="#" class="orange">Audio & Music</a>
+                                </div>
+                            </div>
+                            <div class="course__content">
+                                <div class="course__meta d-flex align-items-center justify-content-between">
+                                    <div class="course__lesson">
+                                        <span><i class="far fa-book-alt"></i>28 Lesson</span>
+                                    </div>
+                                    <div class="course__rating">
+                                        <i class="fa-sharp fa-solid fa-star" style="color: #ffa500;"></i>4.5 (44)</span>
+                                    </div>
+                                </div>
+                                <h3 class="course__title"><a href="">The business Intelligence
+                                        analyst Course 2022</a></h3>
+                                <div class="course__teacher d-flex align-items-center">
+                                    <div class="course__teacher-thumb mr-15">
+                                        <img src="./assets/image/teacher-5.jpg" alt="">
+                                    </div>
+                                    <h6><a href="">Eleanor Fant</a></h6>
+                                </div>
+                            </div>
+                            <div class="course__more d-flex justify-content-between align-items-center">
+                                <div class="course__status d-flex align-items-center">
+                                    <span class="orange">$25.00</span>
+                                    <span class="old-price">$36.00</span>
+                                </div>
+                                <div class="course__btn">
+                                    <a href="" class="link-btn">
+                                        Know Details
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xxl-4">
+                        <div class="course__item white-bg mb-30 fix">
+                            <div class="course__thumb w-img p-relative fix">
+                                <a href="">
+                                    <img src="./assets/image/course-6-1.jpg" alt="">
+                                </a>
+                                <div class="course__tag">
+                                    <a href="#" class="pink">UX Design</a>
+                                </div>
+                            </div>
+                            <div class="course__content">
+                                <div class="course__meta d-flex align-items-center justify-content-between">
+                                    <div class="course__lesson">
+                                        <span><i class="far fa-book-alt"></i>38 Lesson</span>
+                                    </div>
+                                    <div class="course__rating">
+                                        <i class="fa-sharp fa-solid fa-star" style="color: #ffa500;"></i>4.8 (44)</span>
+                                    </div>
+                                </div>
+                                <h3 class="course__title"><a href="">Bases Matemáticas dios Álgebra Ecuacion</a></h3>
+                                <div class="course__teacher d-flex align-items-center">
+                                    <div class="course__teacher-thumb mr-15">
+                                        <img src="./assets/image/teacher-6.jpg" alt="">
+                                    </div>
+                                    <h6><a href="">
+                                            Brian Cumin</a></h6>
+                                </div>
+                            </div>
+                            <div class="course__more d-flex justify-content-between align-items-center">
+                                <div class="course__status d-flex align-items-center">
+                                    <span class="pink">$35.00</span>
+                                    <span class="old-price">$46.00</span>
+                                </div>
+                                <div class="course__btn">
+                                    <a href="" class="link-btn">
+                                        Know Details
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
 
 
 
