create event and costing section

--- a/home.html
+++ b/home.html
@@ -687,6 +687,199 @@
 
 
 
+        <section id="event">
+            <div class="event_bg_shape position-absolute">
+                <img src="./assets/image/events-shape.png" alt="Event Background Image">
+            </div>
+            <div class="container">
+                <div class="row justify-content-center mb-5">
+                    <div class="col-lg-5">
+                        <article class="article text-center">
+                            <h3>Current
+                                <span class="yellow-shape position-relative">
+                                    Events
+                                    <img class="yellowbg position-absolute" src="./assets/image/yellow-bg.png"
+                                        alt="yellow"> </span>
+                            </h3>
+                            <p>We found 13 events available for you.</p>
+                        </article>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-10 col-md-10 mb-3">
+                        <div class="event_item d-flex justify-content-between align-items-center position-relative">
+                            <div class="event_item_content">
+                                <div class="event_time_and_date">
+                                    <span class="br position-relative">Jun 14, 2022</span>
+                                    <span class="br position-relative">12:00 am - 2:30 pm</span>
+                                    <span>New York</span>
+                                </div>
+                                <h3 class="event_name"><a href="#">Digital transformation conference</a></h3>
+                            </div>
+                            <div class="event_item_more">
+                                <a href="#" class="view_all position-relative">
+                                    View More
+                                    <i class="fas fa-arrow-right"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-10 col-md-10 mb-3">
+                        <div class="event_item d-flex justify-content-between align-items-center position-relative">
+                            <div class="event_item_content">
+                                <div class="event_time_and_date">
+                                    <span class="br position-relative">Jun 14, 2022</span>
+                                    <span class="br position-relative">12:00 am - 2:30 pm</span>
+                                    <span>New York</span>
+                                </div>
+                                <h3 class="event_name"><a href="#">World education day conference</a></h3>
+                            </div>
+                            <div class="event_item_more">
+                                <a href="#" class="view_all position-relative">
+                                    View More
+                                    <i class="fas fa-arrow-right"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-10 col-md-10 mb-3">
+                        <div class="event_item d-flex justify-content-between align-items-center position-relative">
+                            <div class="event_item_content">
+                                <div class="event_time_and_date">
+                                    <span class="br position-relative">Jun 14, 2022</span>
+                                    <span class="br position-relative">12:00 am - 2:30 pm</span>
+                                    <span>New York</span>
+                                </div>
+                                <h3 class="event_name"><a href="#">Foundations of global health</a></h3>
+                            </div>
+                            <div class="event_item_more">
+                                <a href="#" class="view_all position-relative">
+                                    View More
+                                    <i class="fas fa-arrow-right"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-10 col-md-10 mb-3">
+                        <div
+                            class="event_item d-flex justify-content-between align-items-center position-relative fill">
+                            <div class="event_item_content">
+                                <div class="event_time_and_date">
+                                    <span class="br position-relative">Jun 14, 2022</span>
+                                    <span class="br position-relative">12:00 am - 2:30 pm</span>
+                                    <span>New York</span>
+                                </div>
+                                <h3 class="event_name"><a href="#">Business creativity workshops</a></h3>
+                            </div>
+                            <div class="event_item_more">
+                                <a href="#" class="view_all position-relative">
+                                    View More
+                                    <i class="fas fa-arrow-right"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </section>
+
+            
+<section id="costing">
+    <div class="container">
+      <div class="row justify-content-center mb-5">
+        <div class="col-lg-5">
+          <article class="article text-center">
+            <h1><b>Simple</b><br>
+                <b> All Inclusive</b>
+              <!-- <span class="yellow-shape position-relative"> -->
+                <b>Pricing</b>
+                <img class="yellowbg position-absolute" src="./assets/image/yellow-bg.png" alt="yellow" style="\margin-left: -170px;margin-top: 39px;"> </span>
+            </h1>
+            <p>No contracts. No surprise fees.</p>
+          </article>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <ul class="nav nav-pills mb-5 mx-auto" id="pills-tab" role="tablist">
+            <li class="nav-item" role="presentation">
+              <button class="nav-link active" id="pills-monthly-tab" data-bs-toggle="pill" data-bs-target="#pills-monthly" type="button" role="tab" aria-controls="pills-monthly" aria-selected="true">Monthly Plan</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link" id="pills-annual-tab" data-bs-toggle="pill" data-bs-target="#pills-annual" type="button" role="tab" aria-controls="pills-annual" aria-selected="false">Annual Plan</button>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-lg-10">
+          <div class="costing_cards tab-content" id="pills-tabcontent">
+            <div class="costing_card_wrapper tab-pane fade justify-content-center active show" id="pills-monthly" role="tabpanel" aria-labelledby="pills-monthly-tab">
+              <div class="costing_card gold">
+                <div class="costing_card_header">
+                  <h4>Gold</h4>
+                  <p>Perfect for small marketing teams</p>
+                  <h3 class="price">$59 <sub>.99 / annually</sub></h3>
+                </div>
+                <ul class="costing_card_featured">
+                  <li><span><i class="fas fa-check"></i></span> Course Discussions</li>
+                  <li><span><i class="fas fa-check"></i></span> Content Library</li>
+                  <li><span><i class="fas fa-check"></i></span> 1-hour Mentorship</li>
+                </ul>
+                <a href="#" class="btn btn-primary try_free">Get Started</a>
+              </div>
+              <div class="costing_card dimond position-relative">
+                <span class="best_sell position-absolute">Best Value</span>
+                <div class="costing_card_header">
+                  <h4>Dimond</h4>
+                  <p>Perfect for small marketing teams</p>
+                  <h3 class="price">$99 <sub>.99 / annually</sub></h3>
+                </div>
+                <ul class="costing_card_featured">
+                  <li><span><i class="fas fa-check"></i></span> Course Discussions</li>
+                  <li><span><i class="fas fa-check"></i></span> Content Library</li>
+                  <li><span><i class="fas fa-check"></i></span> 1-hour Mentorship</li>
+                </ul>
+                <a href="#" class="btn btn-outline-primary try_free">Get Started</a>
+              </div>
+            </div>
+            <div class="costing_card_wrapper tab-pane fade justify-content-center" id="pills-annual" role="tabpanel" aria-labelledby="pills-annual-tab">
+              <div class="costing_card gold">
+                <div class="costing_card_header">
+                  <h4>Gold</h4>
+                  <p>Perfect for small marketing teams</p>
+                  <h3 class="price">$89 <sub>.99 / annually</sub></h3>
+                </div>
+                <ul class="costing_card_featured">
+                  <li><span><i class="fas fa-check"></i></span> Course Discussions</li>
+                  <li><span><i class="fas fa-check"></i></span> Content Library</li>
+                  <li><span><i class="fas fa-check"></i></span> 1-hour Mentorship</li>
+                </ul>
+                <a href="#" class="btn btn-primary try_free">Get Started</a>
+              </div>
+              <div class="costing_card dimond position-relative">
+                <span class="best_sell position-absolute">Best Value</span>
+                <div class="costing_card_header">
+                  <h4>Dimond</h4>
+                  <p>Perfect for small marketing teams</p>
+                  <h3 class="price">$120 <sub>.99 / annually</sub></h3>
+                </div>
+                <ul class="costing_card_featured">
+                  <li><span><i class="fas fa-check"></i></span> Course Discussions</li>
+                  <li><span><i class="fas fa-check"></i></span> Content Library</li>
+                  <li><span><i class="fas fa-check"></i></span> 1-hour Mentorship</li>
+                </ul>
+                <a href="#" class="btn btn-outline-primary try_free">Get Started</a>
+              </div>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </section>
+
+
+
 
 
 
